rename transactions.proto messages and services to protobuf guidelines
